# Swift2TypeScript

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.gradle  issues.md  not-implemented.md  package-lock.json  package.json  tsconfig.json  tslint.json  uncrustify.cfg
cmake/: ExternalAntlr4Cpp.cmake  submodules.cmake
grammar/: SwiftLexer.g4  SwiftParser.g4
grammars/: SwiftLexer.g4  SwiftParser.g4
src/: Decorator.ts  SwiftUtil.h.bak  main.cpp  main.ts  renderer.ts  util.ts
src/main/java/com/github/eternalphane/swift2typescript/: Main.java  Scope.java  Swift2TSVisitor.java  SwiftLexer.g4  SwiftLexer.java  SwiftParser.g4  SwiftParser.java  SwiftParser.tokens  SwiftParserBaseVisitor.java  SwiftParserVisitor.java
src/transpiler/: AstBuilderVisitor.ts  AstVisitor.ts  OperatorTable.hpp  OperatorTable.ts  SwiftAstBuilderVisitor.cpp  SwiftAstBuilderVisitor.hpp  SwiftAstBuilderVisitor.ts  SwiftAstVisitor.ts  SwiftHelper.ts  SwiftTranspilerVisitor.cpp.bak  SwiftTranspilerVisitor.hpp.bak  Transpiler.cpp  Transpiler.hpp
src/transpiler/ast/: ASTNodes.hpp  ASTVisitor.cpp  ASTVisitor.hpp  AnyType.cpp  AnyType.hpp  ArrayType.cpp  ArrayType.hpp  AssignmentOperator.cpp  AssignmentOperator.hpp  Attribute.cpp  Attribute.hpp  Attribute.ts  BinaryOperator.cpp  BinaryOperator.hpp  ConditionalOperator.cpp  ConditionalOperator.hpp  Declaration.ts  DictionaryType.cpp  DictionaryType.hpp  Expression.hpp  Expression.ts  FunctionType.cpp  FunctionType.hpp  Generic.ts  Identifier.cpp  Identifier.hpp  InOutExpression.cpp  InOutExpression.hpp  Node.cpp  Node.hpp  Node.ts  Operator.cpp  Operator.hpp  OptionalType.cpp  OptionalType.hpp  Pattern.ts  PostfixOperator.cpp  PostfixOperator.hpp  PrefixOperator.cpp  PrefixOperator.hpp  (+19 more)
src/util/: container_helper.hpp  experimental_feature.hpp  property_helper.hpp  string_util.hpp
static/: index.html
test/: main.cpp
